hide weather sections until successful query is made

--- a/index.html
+++ b/index.html
@@ -51,43 +51,13 @@
             <!-- for recent searches -->
         </section>
 
-        <section class="current-weather row">
+        <section class="current-weather row d-none">
             <h4>Current Weather</h4>
 
         </section>
 
-        <section class="forecast-weather row mx-1 mt-3">
+        <section class="forecast-weather row mx-1 mt-3 d-none">
             <h4>5-Day Forecast</h4>
-
-            <div class="card col-6 col-md-3 col-lg-2 mx-md-2 bg-dark-primary">
-                <div class="card-body">
-                    <h5 id="day1" class="card-title mb-3 text-start">Card title<img src="https://openweathermap.org/img/wn/10d@2x.png"></h5>
-                    <!-- <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6> -->
-                    <!-- <p class="card-text">
-                        Some quick example text to build on the card title and make up the bulk of the card's content.
-                    </p> -->
-                    <ul class="list-unstyled card-text">
-                        <li class="temp">Temp: </li>
-                        <li class="wind">Wind: </li>
-                        <li class="humidity">Humidity: </li>
-                    </ul>
-                </div>
-            </div>
-            
-            <div class="card col-6 col-md-3 col-lg-2 mx-md-2 bg-dark-primary">
-                <div class="card-body">
-                    <h5 id="day5" class="card-title mb-3">Card title<img src="https://openweathermap.org/img/wn/10d@2x.png"></h5>
-                    <!-- <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6> -->
-                    <!-- <p class="card-text">
-                        Some quick example text to build on the card title and make up the bulk of the card's content.
-                    </p> -->
-                    <ul class="list-unstyled card-text">
-                        <li class="temp">Temp: </li>
-                        <li class="wind">Wind: </li>
-                        <li class="humidity">Humidity: </li>
-                    </ul>
-                </div>
-            </div>
             
         </section>
     </main>
