dynamically update five day forecast section

--- a/index.html
+++ b/index.html
@@ -51,14 +51,12 @@
             <!-- for recent searches -->
         </section>
 
+        <h3 class="weather-header d-none">Current Weather</h3>
         <section class="current-weather row d-none">
-            <h4>Current Weather</h4>
-
         </section>
 
-        <section class="forecast-weather row mx-1 mt-3 d-none">
-            <h4>5-Day Forecast</h4>
-            
+        <h3 class="forecast-header d-none">5-Day Forecast</h3>
+        <section class="forecast-weather row mx-1 mt-3 d-none">    
         </section>
     </main>
 
