--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <h1>Weather Dashboard</h1>
     </header>
 
-    <main class="container mx-md-5 my-md-3">
-        <section class="my-2">
+    <main class="mx-md-5 my-md-3">
+        <section class="container my-2">
             <form  id="search-box" action="" method="post" class="row">
                 <label for="search-input" class="mt-3 fst-italic col-9">Type your city name to see the forecast for the week</label>
                 <div class="col-12 col-md-9 h-50">
@@ -51,12 +51,12 @@
             <!-- for recent searches -->
         </section>
 
-        <h3 class="weather-header d-none">Current Weather</h3>
+        <h3 class="container-fluid weather-header d-none">Current Weather</h3>
         <section class="current-weather row d-none">
         </section>
 
-        <h3 class="forecast-header d-none">5-Day Forecast</h3>
-        <section class="forecast-weather row mx-1 mt-3 d-none">    
+        <h3 class="container-fluid forecast-header d-none">6-Day Forecast</h3>
+        <section class="forecast-weather max-width-100vw row mx-1 mt-3 d-none">    
         </section>
     </main>
 
