added functionality to show current weather to page

--- a/index.html
+++ b/index.html
@@ -51,11 +51,24 @@
             <!-- for recent searches -->
         </section>
 
-        <h3 class="container-fluid weather-header d-none">Current Weather</h3>
-        <section class="current-weather row d-none">
+        <h2 class="container-fluid weather-header d-none">Current Weather</h3>
+        <section class="current-weather max-width-100vw row mx-1 mt-3 mb-4 d-none">
+            <!-- DELETE LATER -->
+            <!-- <div class="card col-12 col-md-9 col-lg-6 my-1 my-md-2 mx-md-2 bg-light-primary">
+                <div class="card-body">
+                    <h5 id="day1" class="card-title mb-3 fs-3 text text-center">Card title<img src="https://openweathermap.org/img/wn/10d@2x.png"></h5>
+                        
+                    <ul class="list-unstyled card-text fs-5 text-center">
+                        <li class="temp">Temp: </li>
+                        <li class="wind">Wind: </li>
+                        <li class="humidity">Humidity: </li>
+                    </ul>
+                </div>
+            </div> -->
+
         </section>
 
-        <h3 class="container-fluid forecast-header d-none">6-Day Forecast</h3>
+        <h2 class="container-fluid forecast-header d-none">6-Day Forecast</h3>
         <section class="forecast-weather max-width-100vw row mx-1 mt-3 d-none">    
         </section>
     </main>
