--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@
     </header>
 
     <main class="mx-md-5 my-md-3">
+        <section class="position-fixed recent-search-pos d-flex flex-column align-items-end w-100">
+            <button class="btn btn-primary icon-size" type="button" data-bs-toggle="collapse" data-bs-target="#recentSearches" aria-expanded="false" aria-controls="recentSearches">
+                T
+            </button>
+            <div class="collapse" id="recentSearches">
+                <div class="card card-body">
+                    <div class="card card-body" id="noRecentSearches">
+                        You don't have any recent searches!
+                    </div>
+                    <div class="card card-body recent-search-card">
+                        This is some DIFFERENT placeholder content.
+                    </div>
+                </div>
+            </div>    
+        </section>
+        
+
         <section class="container my-2">
             <form  id="search-box" action="" method="post" class="row">
                 <label for="search-input" class="mt-3 fst-italic col-9">Type your city name to see the forecast for the week</label>
@@ -47,8 +64,9 @@
 
         </section>
 
-        <section id="recent-searches row">
+        <section id="recent-searches row position-fixed top-10 end-0">
             <!-- for recent searches -->
+            
         </section>
 
         <h2 class="container-fluid weather-header d-none">Current Weather</h3>
