--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+        rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
         crossorigin="anonymous"></script>  
@@ -36,18 +38,16 @@
     </header>
 
     <main class="mx-md-5 my-md-3">
-        <section class="position-fixed recent-search-pos d-flex flex-column align-items-end w-100">
-            <button class="btn btn-primary icon-size" type="button" data-bs-toggle="collapse" data-bs-target="#recentSearches" aria-expanded="false" aria-controls="recentSearches">
-                T
+        <section class="position-fixed recent-search-pos d-flex flex-column align-items-end w-100 z-2">
+            <button class="btn btn-primary icon-size border border-5 border-primary-subtle rounded-circle" type="button" data-bs-toggle="collapse" data-bs-target="#recentSearches" aria-expanded="false" aria-controls="recentSearches">
+                <i class="bi bi-search"></i>
             </button>
             <div class="collapse" id="recentSearches">
-                <div class="card card-body">
-                    <div class="card card-body" id="noRecentSearches">
-                        You don't have any recent searches!
-                    </div>
-                    <div class="card card-body recent-search-card">
-                        This is some DIFFERENT placeholder content.
-                    </div>
+                <div class="card card-body bg-dark-subtle">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item" id="noRecentSearches">You don't have any recent searches!</li>
+                        <li class="list-group-item recent-search-card">Placeholder text</li>
+                    </ul>
                 </div>
             </div>    
         </section>
