recent search collapse is fully function. You can click recent searches and get the forecast

--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
             </button>
             <div class="collapse" id="recentSearches">
                 <div class="card card-body bg-dark-subtle">
-                    <ul class="list-group list-group-flush">
+                    <ul class="list-group list-group-flush" id="searchesList">
                         <li class="list-group-item" id="noRecentSearches">You don't have any recent searches!</li>
-                        <li class="list-group-item recent-search-card">Placeholder text</li>
                     </ul>
                 </div>
             </div>    
@@ -90,11 +89,6 @@
         <section class="forecast-weather max-width-100vw row mx-1 mt-3 d-none">    
         </section>
     </main>
-
-    <footer>
-        <p>@jordaneburton</p>
-
-    </footer>
 
     <script src="./assets/index.js"></script>
 
