added city name in current weather header

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </form>
         </section>
 
-        <h2 class="container-fluid weather-header d-none">Current Weather</h3>
+        <h2 class="container-fluid weather-header d-none">Current Weather in <span id="inputCity"></span></h3>
         <section class="current-weather max-width-100vw row mx-1 mt-3 mb-4 d-none">
         </section>
 
